--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         CORBA-Perl
-version:      0.41
-version_from: lib/CORBA/Perl.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                CORBA-Perl
+version:             0.42
+abstract:            IDL compiler to Perl mapping
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36_02
+distribution_type:   module
+requires:     
     CORBA::IDL:                    2.6
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Francois PERRAD (francois.perrad@gadz.org)
