--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:                CORBA-Perl
-version:             0.42
+version:             0.43
 abstract:            IDL compiler to Perl mapping
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.36_02
+generated_by:        ExtUtils::MakeMaker version 6.3201
 distribution_type:   module
 requires:     
     CORBA::IDL:                    2.6
